--- a/Responsive Web Design Projects/Build a Technical Documentation Page/index.html
+++ b/Responsive Web Design Projects/Build a Technical Documentation Page/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <title>iPhone</title>
+    <title>Javascript documentation</title>
 
     <link rel="stylesheet" href="css.css">
   </head>
